--- a/app/src/main/res/layout/head_gif_red_layout.xml
+++ b/app/src/main/res/layout/head_gif_red_layout.xml
@@ -3,17 +3,19 @@
                 android:layout_width="56dp"
                 android:layout_height="56dp">
 
-    <!--<com.example.myapplication.GifImageView-->
-        <!--android:layout_width="24dp"-->
-        <!--android:layout_height="24dp"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:id="@+id/btn"/>-->
+    <com.example.myapplication.GifImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn"/>
+<!--
 
     <ImageView
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_centerInParent="true"
         android:id="@+id/btn"/>
+-->
 
 
     <ImageView
